fix details on mobile and toggle password on login

--- a/src/components/Photo/scss/PhotoComponent.scss
+++ b/src/components/Photo/scss/PhotoComponent.scss
@@ -8,6 +8,10 @@
   opacity: 0;
 }
 
+.photo {
+  width: 100%;
+}
+
 .photo__normal {
   width: 100%;
 }
